Boxed layout issue fixed on single post page, at the bottom of the page grey space of 30px removed

--- a/assets/sass/0_base/_reset.scss
+++ b/assets/sass/0_base/_reset.scss
@@ -3,3 +3,6 @@
   box-shadow: none;
   border-radius: 0;
 }
+.single-post .main-raised {
+  margin-bottom: 0;
+}
